# creparm

./: .gitignore  CMakeLists.txt  Makefile  README.md  ThingsToDo.txt  build_run.sh  reparm
analysis/: analysis.py  first_run.com  gene.py  initial.com  second_run.com  third_run.com
analysis/testFitness/: CMakeLists.txt  reparm.in  reparm_structures.xyz  test_parameters.com
analysis/testFitness/include/: container_math.h  coordinates.h  fitness.h  gaussian.h  gaussian_input.h  gaussian_output.h  gin_reader.h  gout_reader.h  header.h  parameter_group.h  parameters.h  reparm_data.h  reparm_input.h  system_tools.h
analysis/testFitness/src/: coordinates.cpp  fitness.cpp  gaussian.cpp  gaussian_input.cpp  gaussian_output.cpp  gin_reader.cpp  gout_reader.cpp  header.cpp  main.cpp  parameter_group.cpp  parameters.cpp  reparm_data.cpp  reparm_input.cpp
documentation/: _region_.tex  fitness.tex  genesis.tex
include/: aristocratic_cloning.h  breed.h  container_math.h  coordinates.h  diversity.h  fitness.h  gaussian.h  gaussian_input.h  gaussian_output.h  genesis.h  genetic_algorithm.h  gin_reader.h  gout_reader.h  header.h  mutate.h  parameter_group.h  parameters.h  print_best.h  reparm_data.h  reparm_exceptions.h  reparm_input.h  survivor.h  system_tools.hpp
src/: .dir-locals.el  .dir-locals.el~  .gaussian.cpp.swp  .main.cpp.swp  aristocratic_cloning.cpp  breed.cpp  coordinates.cpp  diversity.cpp  fitness.cpp  gaussian.cpp  gaussian_input.cpp  gaussian_output.cpp  genesis.cpp  genetic_algorithm.cpp  gin_reader.cpp  gout_reader.cpp  header.cpp  main.cpp  mutate.cpp  parameter_group.cpp  parameters.cpp  print_best.cpp  reparm_data.cpp  reparm_input.cpp  survivor.cpp
test/: Furan.com  FuranAM1.com  FuranAM1.log1  FuranAM1.log2  FuranDFT.com  FuranDFTfreq.com  best.com  file1.txt  file2.txt  file3.txt  reparm.in
test/furan_examples/: FuranDFT.com
test/irc/: best.com  saddle.chk
test/thiophene_examples/: 1  Thiophene.com  ThiopheneDFT.com  Thiophene_best_0.com  Thiophene_best_1.com  Thiophene_best_2.com  best.chk  best.com  best_2.com  best_es.com  best_freq.com  freq.chk  reparm.in
